# miscellaneous

./: README.md
BIM/: README.md
BIM/IFC/: test.json  test.xkt
BigData/: .gitignore  GamingProcessor.ipynb  README.md  generate_sample_data.py  machine_learning_pipeline.py  setup.sh
ChatBot/: .env.example  .gitignore  Dockerfile  README.md  VECTOR_DATABASE.md  docker-compose.yml  requirements.txt
ChatBot/aws/: cloudformation-api-gateway.yaml  deploy.sh
ChatBot/examples/: example_usage.py
ChatBot/frontend/: README.md
ChatBot/frontend/public/: index.html
ChatBot/frontend/src/: App.css  App.tsx  types.ts
ChatBot/src/: config.py  document_processor.py  llm_integration.py  ollama_integration.py  vector_database.py  web_interface.py
ChatService/: .air.toml  .env.example  .gitignore  Dockerfile  Dockerfile.prod  Makefile  README.md  docker-compose.yml  k8s-deployment.yml
ChatService/scripts/: curl_commands.sh  deploy_gcp.sh  init-mongo.js  test_api.sh  test_demo_api.sh
ChatService/src/: main.go
ChatService/src/config/: config.go
ChatService/src/handlers/: message_handler.go
ChatService/src/middleware/: jwt.go  middleware.go
Chatbot/: .dockerignore  DEPLOYMENT.md  OLLAMA.md  README.md
Chatbot/aws/: cloudformation-template.yaml  deploy-api-gateway.sh  iam-deployment-policy.json  sagemaker_deploy.py  setup-iam.sh
Chatbot/examples/: ollama_example.py
Chatbot/frontend/: package.json
Chatbot/scripts/: README.md  setup_aws_vector_db.sh  setup_vector_db.sh
Chatbot/src/: __init__.py  embeddings.py  main.py
DataAnalytics/: README.md
DataAnalytics/backend/: .env  .gitignore  db.sql  go.mod  go.sum  server.go
DataAnalytics/client/: .gitignore  package.json
DataAnalytics/deployment/: .env  README.md  docker-compose.yaml
DataAnalytics/frontend/: .gitignore  package.json
DataAnalytics/server/: go.mod
DataStructures/: README.md  read_json_file.py
Datasets/: .gitignore  EXPLORATORY-DATA-ANALYSIS.md  README.md  feature_selection.py  regression_ml.py  requirements.txt
DeepLearning/: .env.example  .gitignore  QUICKSTART.md  README.md  requirements.txt
DeepLearning/data/: sample_timeseries.csv
DeepLearning/docker/: Dockerfile.etl  Dockerfile.inference  docker-compose.yml
DeepLearning/models/: README.md
DeepLearning/scripts/: produce_sample_data.py  setup_env.sh  start_kafka.sh  train_model.sh
DeepLearning/tests/: test_etl.py  test_inference.py
DerivativesTrading/: docker-compose.yml  requirements.txt
DerivativesTrading/training/: feature_engineering.py  train_lstm.py
DerivativesTradingPlatform/: README.md
DerivativesTradingPlatform/config/: timescaledb_init.sql
DerivativesTradingPlatform/tests/: test_trading_engine.py
DigitRecognizer/: README.md  classify.py
ERP/: README.md
ETL/: Dockerfile.txt  README.md  docker-compose.yml
ETL/app/: elt.py  main.py  query_time_gaps.py  requirements.txt
ETL/sql/: sql_schema.sql  sql_time_gaps.sql  sql_top_hits_germany.sql
EmbeddedSystems/: README.md
EmbeddedSystems/Compilers/: .gitignore  CMakeLists.txt  PROJECT.md  README.md  VALIDATION.md
EmbeddedSystems/Compilers/scripts/: compare_compilers.sh
EmbeddedSystems/Compilers/src/C/: t.c
EmbeddedSystems/Debugging/: ASSEMBLY_DEBUG.md  README.md  assembly-debug.code-workspace  debug_session.gdb  devops_setup.sh
EmbeddedSystems/IPC/: .gitignore  README.md
EmbeddedSystems/IPC/src/server/: CMakeLists.txt  server.cpp  server.h
EmbeddedSystems/OperatingSystems/: README.md
EmbeddedSystems/Programming/: README.md
EmbeddedSystems/ProgrammingLanguages/: .gitignore
EmbeddedSystems/ProgrammingLanguages/src/qt/: CMakeLists.txt
EmbeddedSystemsDevelopment/Compilers/: .gitignore  COMPILER_VALIDATION.md  Makefile  README.md  VALIDATION_SUMMARY.md  setup-yocto-clang.sh
EmbeddedSystemsDevelopment/Debugging/: .gitignore  README.md  demo_assembly_debug.sh
EmbeddedSystemsDevelopment/IPC/: README.md  build.sh
EmbeddedSystemsDevelopment/IPC/src/client/: CMakeLists.txt  client.pro
EmbeddedSystemsDevelopment/ProgrammingLanguages/: PROJECT_SUMMARY.md  README.md
EnergyMarkets/: .env.example  Dockerfile  README.md
EnergyMarkets/scripts/: database.py  entsoe_client.py  tasks.py
EnergyTrading/: .gitignore
EnergyTrading/tests/: test_integration.py  test_lstm_service.py
EnergyTrading/training/: requirements.txt
LLM/: README.md
LLM/ARCEE_AGENT/: .gitignore  README.md  STEPS.md  dataset_example.ipynb  demo_ollama.py  fine_tune_arcee.py  main.py  model_manager.py  requirements.txt  setup.sh  test_api.py  test_arcee_agent.py
LLM/LangChain/: .env.example  .gitignore  DEPLOYMENT.md  README.md  example.js  local-server.js  package-lock.json  package.json  serverless.yml
LLM/LangGraph/: README.md
LLM/vLLM/: README.md
OCR/: .gitignore  API.md  ARCHITECTURE.md  DOCUMENTATION.md  Optical Character Recognition.txt  QUICKSTART.md  README.md  demo.py  fastapi_ocr_service.py  requirements.txt  serve_frontend.py  test_api_client.py  verify_setup.sh
OCR/BIM/: bim_ocr_processor.py  requirements.txt
OCR/LLM/: llm_ocr_ollama.py  llm_ocr_transformers.py  requirements.txt
OCR/PDF/: pdf_ocr_easyocr.py  pdf_ocr_tesseract.py  requirements.txt
OCR/frontend/: index.html  requirements.txt
Patterns/: README.md
Patterns/VISITOR/: visitor.py
PowerMarkets/: .gitignore  README.md  docker-compose.yml  requirements.txt  setup.sh
PowerMarkets/init-db/: 01_timescale.sql
PowerMarkets/scripts/: connectors.py  main.py  models.py  nordpool_client.py  schemas.py
QUESTIONS/: README.md
SmartBuildings/: README.md
SmartBuildings/continuos/: eventloop_pyaci.py
SmartBuildings/interactive/: interactive_pyaci.py
SupplyChain/: README.md  docker-compose-poet-restart.yaml  docker-compose-poet.yaml  peer-to-peer.odg
SupplyChain/demo_client/: Dockerfile  package.json  webpack.config.js
SupplyChain/ledger_sync/: Dockerfile
SupplyChain/processor/: Dockerfile  setup.py
SupplyChain/protos/: agent.proto  payload.proto  property.proto  proposal.proto  record.proto
SupplyChain/server/: package.json
SupplyChain/shell/: Dockerfile
(+365 files in other folders)
